--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/x-data-grid": "^5.10.0",
+    "@types/moment": "^2.13.0",
     "@walletconnect/web3-provider": "^1.7.5",
     "ethers": "^5.6.2",
+    "moment": "^2.29.3",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
