--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "@types/moment": "^2.13.0",
     "@walletconnect/web3-provider": "^1.7.5",
     "ethers": "^5.6.2",
-    "moment": "^2.29.3",
+    "moment": "2.24.0",
+    "moralis": "^1.8.1",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-moralis": "^1.4.0",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
-    "@types/node": "17.0.23",
+    "@types/node": "^17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
