--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@walletconnect/web3-provider": "^1.7.5",
     "ethers": "^5.6.2",
     "moment": "^2.29.3",
+    "moralis": "^2.2.0",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-moralis": "^1.4.1",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
