feat:  frontend for P2 transition

--- a/src/abi/facets/ConfigFacet.json
+++ b/src/abi/facets/ConfigFacet.json
@@ -335,13 +335,7 @@
     "type": "function"
   },
   {
-    "inputs": [
-      {
-        "internalType": "address",
-        "name": "user",
-        "type": "address"
-      }
-    ],
+    "inputs": [],
     "name": "getMyP2DepositedToVault",
     "outputs": [
       {
