--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@mui/material": "^5.5.2",
     "@mui/x-data-grid": "^5.10.0",
     "@types/moment": "^2.13.0",
-    "@walletconnect/web3-provider": "^1.7.5",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3auth/web3auth": "^2.1.3",
     "ethers": "^5.6.2",
+    "magic-sdk": "^13.1.0",
     "moment": "^2.29.3",
     "moralis": "^2.2.0",
+    "moralis-v1": "^1.12.0",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-moralis": "^1.4.1",
+    "react-moralis": "^1.4.2",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
