--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/poppins": "^4.5.5",
     "@fontsource/roboto": "^4.5.5",
+    "@iconify/react": "^4.1.0",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
